--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.0",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "mariadb": "^3.2.0",
