--- a/package.json
+++ b/package.json
@@ -17,13 +17,18 @@
   },
   "homepage": "https://github.com/tlp-MRRM/proyecto-1/tree/develop#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.1",
     "mariadb": "^3.2.0",
     "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
     "mysql2": "^3.5.0",
     "nodemon": "^2.0.22",
     "sequelize": "^6.32.1",
