--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-PORT=4000
+PORT=5000
 DB_DATABASE=uk_base
 DB_USER=root
-DB_PASSWORD= 
+DB_PASSWORD=''
 DB_HOST=localhost
 DB_PORT=3306
 DB_DIALECT=mysql
