--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mysql2": "^3.5.0",
     "nodemon": "^2.0.22",
     "sequelize": "^6.32.1",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "sweetalert": "^2.1.2"
   }
 }
