--- a/package.json
+++ b/package.json
@@ -30,13 +30,10 @@
     "jsonwebtoken": "^9.0.1",
     "mariadb": "^3.2.0",
     "morgan": "^1.10.0",
-    "mysql": "^2.18.1",
     "mysql2": "^3.6.0",
     "nodemailer": "^6.9.4",
-    "nodemon": "^2.0.22",
+    "nodemon": "^3.0.1",
     "sequelize": "^6.32.1",
-    "sqlite3": "^5.1.6",
-    "sweetalert": "^2.1.2",
-    "url": "^0.11.1"
+    "sweetalert": "^2.1.2"
   }
 }
