--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "type": "git",
     "url": "git+https://github.com/tlp-MRRM/proyecto-1.git#develop"
   },
-  "author": "Meyer Hector, Rios Facundo y Costadoni Fabricio",
+  "author": "Meyer Hector, Rios Facundo, Costadoni Fabricio y Aymara Cristaldo",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/tlp-MRRM/proyecto-1/issues"
@@ -33,7 +33,8 @@
     "mysql2": "^3.6.0",
     "nodemailer": "^6.9.4",
     "sequelize": "^6.32.1",
-    "sweetalert": "^2.1.2"
+    "sweetalert": "^2.1.2",
+    "url": "^0.11.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
