--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
