--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "mysql2": "^3.6.0",
     "nodemailer": "^6.9.4",
     "sequelize": "^6.32.1",
+    "socket.io": "^4.7.2",
     "sweetalert": "^2.1.2",
     "url": "^0.11.3"
   },
